# readarr-tagger

./: data_file.json  formatted.json  pyproject.toml
app/: jsonparser.py  main.py  out copy.json  out.json
